--- a/modules/scholar/templates/base.tex
+++ b/modules/scholar/templates/base.tex
@@ -13,8 +13,8 @@
 
     \titleformat{\section}[block]{\LARGE\bfseries\centering}{}{0pt}{}
     \titleformat{\subsection}[hang]{\bfseries\large}{\bfseries\large\thesubsection}{6pt}{}
-    \titleformat{\subsubsection}[hang]{\bfseries}{\thesubsubsection}{6pt}{}[]
-    \titleformat{\paragraph}[hang]{\bfseries}{\theparagraph}{0pt}{}[]
+    \titleformat{\subsubsection}[display]{\bfseries}{\thesubsubsection\qquad}{6em}{}[]
+    \titleformat{\paragraph}[runin]{\bfseries}{\theparagraph}{0pt}{}[]
     \titlespacing{\section}{0pt}{0pt}{0pt}
     \titlespacing{\subsection}{0pt}{4mm}{0pt}
     \titlespacing{\subsubsection}{0pt}{2mm}{0pt}
