--- a/modules/scholar/templates/base.tex
+++ b/modules/scholar/templates/base.tex
@@ -4,27 +4,28 @@
 \input{core/i18n/slovak/override.tex}
 \input{input/scholar/(* course.id *)/static/format-override.tex}
 
-\setcounter{secnumdepth}{1}
+\setcounter{secnumdepth}{3}
+
+\hypersetup{bookmarksdepth=4}
 
 \fancypagestyle{scholar}{
     \fancyhf{}
     \fancyhead[C]{\textit{(* course.name *)}}
     \fancyfoot[C]{\small \thepage/\pageref*{LastPage}}
 
-    \titleformat{\section}[block]{\LARGE\bfseries\centering}{}{0pt}{}
-    \titleformat{\subsection}[hang]{\bfseries\large}{\bfseries\large\thesubsection}{6pt}{}
-    \titleformat{\subsubsection}[display]{\bfseries}{\thesubsubsection\qquad}{6em}{}[]
-    \titleformat{\paragraph}[runin]{\bfseries}{\theparagraph}{0pt}{}[]
-    \titlespacing{\section}{0pt}{0pt}{0pt}
-    \titlespacing{\subsection}{0pt}{4mm}{0pt}
+    \titleformat{\section}[block]{\Huge\bfseries\centering}{}{0pt}{}
+    \titleformat{\subsection}[hang]{\LARGE\bfseries\centering\vspace{4mm}\vspace*{-4mm}}{\Roman{subsection}.\quad}{0pt}{}
+    \titleformat{\subsubsection}[hang]{\large\bfseries}{}{0pt}{}[]
+    \titleformat{\paragraph}[hang]{\it\bfseries}{}{0pt}{}[]
+    \titlespacing{\section}{0pt}{6mm}{2mm}
+    \titlespacing{\subsection}{0pt}{6mm}{4mm}
     \titlespacing{\subsubsection}{0pt}{2mm}{0pt}
+    \titlespacing{\paragraph}{0pt}{2mm}{0pt}
 }
 
 (@ block style @)(@ endblock @)
 
 \begin{document}
     \pagestyle{(* self.type() *)}
-    \setcounter{section}{(* issue.number - 1 *)}
-    \section{Cvičenie č. (* issue.number *)(@ block subtitle @)(@ endblock subtitle @)}
     (@ block content @)(@ endblock content @)
 \end{document}
