--- a/modules/scholar/templates/base.tex
+++ b/modules/scholar/templates/base.tex
@@ -16,11 +16,13 @@
     \titleformat{\section}[block]{\Huge\bfseries\centering}{}{0pt}{}
     \titleformat{\subsection}[hang]{\LARGE\bfseries\centering\vspace{4mm}\vspace*{-4mm}}{\Roman{subsection}.\quad}{0pt}{}
     \titleformat{\subsubsection}[hang]{\large\bfseries}{}{0pt}{}[]
-    \titleformat{\paragraph}[hang]{\it\bfseries}{}{0pt}{}[]
+    \titleformat{\paragraph}[hang]{\bfseries}{}{0pt}{}[]
+    \titleformat{\subparagraph}[hang]{\it\bfseries}{}{0pt}{}[]
     \titlespacing{\section}{0pt}{6mm}{2mm}
     \titlespacing{\subsection}{0pt}{6mm}{4mm}
     \titlespacing{\subsubsection}{0pt}{2mm}{0pt}
     \titlespacing{\paragraph}{0pt}{2mm}{0pt}
+    \titlespacing{\subparagraph}{0pt}{2mm}{0pt}
 }
 
 (@ block style @)(@ endblock @)
