--- a/modules/scholar/templates/handout-solutions.tex
+++ b/modules/scholar/templates/handout-solutions.tex
@@ -4,10 +4,11 @@
     (@ for sid, section in issue.sections.items() @)
         \subsection{(* section.name *)}
         \protectedInput{\activeDirectory/(* section.id *)/text.tex}
+        \subsubsection{Úlohy}
         (@ for pid, problem in section.problems.items() @)
-            \subsubsection{Úloha (* problem.number *)}
+            \paragraph{Úloha (* problem.number *)}
             \protectedInput{\activeDirectory/(* section.id *)/(* problem.id *)/problem.tex}
-            \paragraph{Riešenie}
+            \subparagraph{Riešenie}
             \protectedInput{\activeDirectory/(* section.id *)/(* problem.id *)/solution.tex}
         (@ endfor @)
         (@ if not loop.last @)\newpage(@ endif @)
