--- a/modules/naboj/templates/base-venues.tex
+++ b/modules/naboj/templates/base-venues.tex
@@ -4,18 +4,11 @@
 
 (@ block specific @)
     \newcounter{team}
-
     \fancypagestyle{tearoff}{%
+        \fancyhf{}
         \titleformat{\subsection}[runin]{\bfseries}{}{0pt}{\setlength{\fboxsep}{3pt}\framebox[7mm]}[\setlength{\fboxsep}{0pt}]
         \titlespacing*{\subsection}{0pt}{0pt}{8pt}
         \renewcommand{\headrulewidth}{0pt}
         \renewcommand{\footrulewidth}{0pt}
-    }
-
-    \newgeometry{
-        left        = 12mm,
-        right       = 5mm,
-        bottom      = 3mm,
-        top         = 0mm,
     }
 (@ endblock @)
