Updated i18n for Náboj

--- a/modules/naboj/templates/i18n/english.yaml
+++ b/modules/naboj/templates/i18n/english.yaml
@@ -1,55 +1,61 @@
 section:
-    problems:           "Problems"
-    solutions:          "Solutions"
-    answers:            "Answers"
-    modulo:             "Modulo"
+    problems:               "Problems"
+    solutions:              "Solutions"
+    answers:                "Answers"
+    modulo:                 "Modulo"
 caption:
-    table:              "Table"
-    figure:             "Figure"
+    table:                  "Table"
+    figure:                 "Figure"
 competition:
     name:
-        nominative:     "Physics Náboj"
-        genitive:       "Physics Náboj"
-    email:              "info-en@physics.naboj.org"
-    website:            "https://physics.naboj.org/"
+        nominative:         "Physics Náboj"
+        genitive:           "Physics Náboj"
+    email:                  "info-en@physics.naboj.org"
+    website:                "https://physics.naboj.org/"
 tearoff:
-    team:               "Team"
-    bottom:             "The team has received all problems."
+    team:                   "Team"
+    bottom:                 "The team has received all problems."
 constants:
-    title:              "Table of constants"
-    instruction:        "We recommend to use these values of constants during the competition. However, results calculated with more precise values of these constants \\textbf{will} be accepted."
-    constant:           "constant"
-    symbol:             "symbol"
-    value:              "value"
+    title:                  "Table of constants"
+    instruction:            "We recommend to use these values of constants during the competition. However, results calculated with more precise values of these constants \\textbf{will} be accepted."
+    constant:               "constant"
+    symbol:                 "symbol"
+    value:                  "value"
 instructions:
-    title:              "Instructions" 
+    title:                  "Instructions" 
 envelope:
-    donotopen:          "Do not open this envelope before the competition starts."
+    donotopen:              "Do not open this envelope before the competition starts."
 
 physics_constants:
-    au:                 "astronomical unit"
-    avogadro:           "Avogadro constant"
-    boltzmann:          "Boltzmann constant"
-    density_air:        "density of the air at STP"
-    density_helium:     "density of helium at STP"
-    density_water:      "density of water at STP"
-    elementary_charge:  "elementary charge"
-    gforce:             "standard acceleration due to gravity"
-    gravity:            "gravitational constant"
-    inch:               "inch"
-    mass_earth:         "mass of the Earth"
-    mass_electron:      "electron rest mass"
-    mass_proton:        "proton rest mass"
-    mass_sun:           "mass of the Sun"
-    parsec:             "parsec"
-    permeability:       "permeability of free space"
-    permittivity:       "permittivity of free space"
-    planck:             "Planck constant"
-    pressure_standard:  "atmospheric pressure"
-    puerperium:         "puerperium"
-    radius_earth:       "radius of the Earth"
-    radius_sun:         "radius of the Sun"
-    solar_flux:         "solar constant"
-    speed_light:        "speed of light"
-    stefan_boltzmann:   "Stefan--Boltzmann constant"
-    universal_gas:      "universal gas constant"
+    amu:                    "atomic mass unit"
+    au:                     "astronomical unit"
+    avogadro:               "Avogadro constant"
+    boltzmann:              "Boltzmann constant"
+    density_air:            "density of the air at STP"
+    density_helium:         "density of helium at STP"
+    density_water:          "density of water at STP"
+    density_mercury:        "density of mercury at STP"
+    density_gold:           "density of gold at STP"
+    elementary_charge:      "elementary charge"
+    gforce:                 "standard acceleration due to gravity"
+    gravity:                "gravitational constant"
+    heat_capacity_water:    "heat capacity of water"
+    inch:                   "inch"
+    mass_earth:             "mass of the Earth"
+    mass_electron:          "electron rest mass"
+    mass_proton:            "proton rest mass"
+    mass_sun:               "mass of the Sun"
+    molar_mass_gold:        "molar mass of gold"
+    parsec:                 "parsec"
+    permeability:           "permeability of free space"
+    permittivity:           "permittivity of free space"
+    planck:                 "Planck constant"
+    pressure_standard:      "atmospheric pressure"
+    puerperium:             "puerperium"
+    radius_earth:           "radius of the Earth"
+    radius_sun:             "radius of the Sun"
+    solar_flux:             "solar constant"
+    speed_light:            "speed of light"
+    stefan_boltzmann:       "Stefan--Boltzmann constant"
+    temperature_sun:        "temperature of the Sun"
+    universal_gas:          "universal gas constant"
