--- a/modules/naboj/templates/i18n/slovak.yaml
+++ b/modules/naboj/templates/i18n/slovak.yaml
@@ -35,6 +35,7 @@ physics_constants:
     density_helium:         "hustota hélia"
     density_water:          "hustota vody"
     density_mercury:        "hustota ortuti"
+    density_gold:           "hustota zlata"
     elementary_charge:      "elementárny náboj"
     gforce:                 "tiažové zrýchlenie pri povrchu Zeme"
     gravity:                "gravitačná konštanta"
@@ -44,6 +45,7 @@ physics_constants:
     mass_electron:          "hmotnosť elektrónu"
     mass_proton:            "hmotnosť protónu"
     mass_sun:               "hmotnosť Slnka"
+    molar_mass_gold:        "molárna hmotnosť zlata"
     parsec:                 "parsek"
     permeability:           "magnetická permeabilita vákua"
     permittivity:           "elektrická permitivita vákua"
@@ -55,4 +57,5 @@ physics_constants:
     solar_flux:             "solárna konštanta"
     speed_light:            "rýchlosť svetla"
     stefan_boltzmann:       "Stefan--Boltzmannova konštanta"
+    temperature_sun:        "teplota Slnka"
     universal_gas:          "univerzálna plynová konštanta"
