Removed formats from scholar

--- a/modules/scholar/templates/handout-students.tex
+++ b/modules/scholar/templates/handout-students.tex
@@ -4,12 +4,14 @@
     (@ for sid, section in issue.sections.items() @)
         \subsection{(* section.name *)}
         \protectedInput{\activeDirectory/(* section.id *)/text.tex}
-        \subsubsection{Úlohy}
-        (@ for pid, problem in section.problems.items() @)
-            \paragraph{Úloha (* problem.number *)}
-            \protectedInput{\activeDirectory/(* section.id *)/(* problem.id *)/problem.tex}
-            (@ block solution @)(@ endblock solution @)
-        (@ endfor @)
+        (@ if section.problems @)
+            \subsubsection{Úlohy}
+            (@ for pid, problem in section.problems.items() @)
+                \paragraph{Úloha (* problem.number *)}
+                \protectedInput{\activeDirectory/(* section.id *)/(* problem.id *)/problem.tex}
+                (@ block solution @)(@ endblock solution @)
+            (@ endfor @)
+        (@ endif @)
         (@ if not loop.last @)\newpage(@ endif @)
     (@ endfor @)
 (@ endblock sections @)
