--- a/modules/naboj/templates/i18n/polish.yaml
+++ b/modules/naboj/templates/i18n/polish.yaml
@@ -1,55 +1,61 @@
 section:
-    problems:           "Problemy"
-    solutions:          "Rozwiązania"
-    answers:            "Odpowiedzi"
-    modulo:             "Modulo"
+    problems:               "Problemy"
+    solutions:              "Rozwiązania"
+    answers:                "Odpowiedzi"
+    modulo:                 "Modulo"
 caption:
-    table:              "Tabela"
-    figure:             "Figura"
+    table:                  "Tabela"
+    figure:                 "Figura"
 competition:
     name:
-        nominative:     "Nabój Fizyczny"
-        genitive:       "Nabója Fizycznego"
-    email:              "info-pl@physics.naboj.org"
-    website:            "https://physics.naboj.org/"
+        nominative:         "Nabój Fizyczny"
+        genitive:           "Nabója Fizycznego"
+    email:                  "info-pl@physics.naboj.org"
+    website:                "https://physics.naboj.org/"
 tearoff:
-    team:               "Zespół"
-    bottom:             "The team has received all problems."
+    team:                   "Zespół"
+    bottom:                 "The team has received all problems."
 constants:
-    title:              "Tabela stałych"
-    instruction:        "Podczas zawodów zalecamy stosowanie podanych wartości stałych fizycznych. Jednak wyniki obliczone z dokładniejszymi wartościami \\textbf{będą} akceptowane."
-    constant:           "stała"
-    symbol:             "oznaczenie"
-    value:              "wartość"
+    title:                  "Tabela stałych"
+    instruction:            "Podczas zawodów zalecamy stosowanie podanych wartości stałych fizycznych. Jednak wyniki obliczone z dokładniejszymi wartościami \\textbf{będą} akceptowane."
+    constant:               "stała"
+    symbol:                 "oznaczenie"
+    value:                  "wartość"
 instructions:
-    title:              "Instrukcje"
+    title:                  "Instrukcje"
 envelope:
-    donotopen:          "???"
+    donotopen:              "???"
 
 physics_constants:
-    au:                 "jednostka astronomiczna (odległość Ziemia--Słońce)"
-    avogadro:           "stała Avogadra"
-    boltzmann:          "stała Boltzmanna"
-    density_air:        "gęstość powietrza"
-    density_helium:     "gęstość helu"
-    density_water:      "gęstość wody"
-    elementary_charge:  "ładunek elementarny"
-    gforce:             "przyspieszenie ziemskie normalne"
-    gravity:            "stała grawitacji"
-    inch:               "cal"
-    mass_earth:         "masa Ziemi"
-    mass_electron:      "masa elektronu"
-    mass_proton:        "masa protonu"
-    mass_sun:           "masa Słońca"
-    parsec:             "parsek"
-    permeability:       "przenikalność magnetyczna próżni"
-    permittivity:       "przenikalność elektryczna próżni"
-    planck:             "stała Plancka"
-    pressure_standard:  "ciśnienie atmosferyczne"
-    puerperium:         "połóg"
-    radius_earth:       "promień Ziemi"
-    radius_sun:         "promień Słońca"
-    solar_flux:         "gęstość strumienia promieniowania słonecznego w \\SI{1}{\\au}"
-    speed_light:        "szybkość światła w próżni"
-    stefan_boltzmann:   "stała Stefana-Boltzmanna"
-    universal_gas:      "stała gazowa"
+    amu:                    ""
+    au:                     "jednostka astronomiczna (odległość Ziemia--Słońce)"
+    avogadro:               "stała Avogadra"
+    boltzmann:              "stała Boltzmanna"
+    density_air:            "gęstość powietrza"
+    density_helium:         "gęstość helu"
+    density_water:          "gęstość wody"
+    density_mercury:        ""
+    density_gold:           ""
+    elementary_charge:      "ładunek elementarny"
+    gforce:                 "przyspieszenie ziemskie normalne"
+    gravity:                "stała grawitacji"
+    heat_capacity_water:    ""
+    inch:                   "cal"
+    mass_earth:             "masa Ziemi"
+    mass_electron:          "masa elektronu"
+    mass_proton:            "masa protonu"
+    mass_sun:               "masa Słońca"
+    molar_mass_gold:        ""
+    parsec:                 "parsek"
+    permeability:           "przenikalność magnetyczna próżni"
+    permittivity:           "przenikalność elektryczna próżni"
+    planck:                 "stała Plancka"
+    pressure_standard:      "ciśnienie atmosferyczne"
+    puerperium:             "połóg"
+    radius_earth:           "promień Ziemi"
+    radius_sun:             "promień Słońca"
+    solar_flux:             "gęstość strumienia promieniowania słonecznego w \\SI{1}{\\au}"
+    speed_light:            "szybkość światła w próżni"
+    stefan_boltzmann:       "stała Stefana-Boltzmanna"
+    temperature_sun:        ""
+    universal_gas:          "stała gazowa"
