--- a/modules/naboj/templates/i18n/hungarian.yaml
+++ b/modules/naboj/templates/i18n/hungarian.yaml
@@ -1,58 +1,63 @@
 section:
-    problems:           "Feladatok"
-    solutions:          "Megoldások"
-    answers:            "Válaszok"
-    modulo:             "Modulo"
+    problems:               "Feladatok"
+    solutions:              "Megoldások"
+    answers:                "Válaszok"
+    modulo:                 "Modulo"
 caption:
-    table:              "Táblázat"
-    figure:             "Ábra"
+    table:                  "Táblázat"
+    figure:                 "Ábra"
 competition:
     name:
-        nominative:     "Náboj Fizika"
-        genitive:       "Náboj Fizika"
-    email:              "info-hu@physics.naboj.org"
-    website:            "https://physics.naboj.org/"
+        nominative:         "Náboj Fizika"
+        genitive:           "Náboj Fizika"
+    email:                  "info-hu@physics.naboj.org"
+    website:                "https://physics.naboj.org/"
 tearoff:
-    team:               "Csapat"
-    bottom:             "The team has received all problems."
+    team:                   "Csapat"
+    bottom:                 "The team has received all problems."
 constants:
-    title:              "Konstansok táblázata"
-    instruction:        ""
-    constant:           ""
-    symbol:             ""
-    value:              ""
+    title:                  "Konstansok táblázata"
+    instruction:            ""
+    constant:               ""
+    symbol:                 ""
+    value:                  ""
 instructions:
-    title:              "Utasítás" 
+    title:                  "Utasítás"
 envelope:
-    donotopen:          "Do not open this envelope before the competition starts."
+    donotopen:              "Do not open this envelope before the competition starts."
 
 physics_constants:
-    au:                 "csillagászati egység (Föld--Nap távolság)"
-    avogadro:           "Avogadro-állandó"
-    boltzmann:          "Boltzmann-állandó"
-    density_air:        "levegő sűrűsége"
-    density_helium:     "hélium sűrűsége"
-    density_water:      "a víz sűrűsége"
-    elementary_charge:  "elemi töltés"
-    gforce:             "nehézségi gyorsulás a Földön"
-    gravity:            "gravitációs állandó"
-    inch:               "hüvelyk"
-    mass_earth:         "a Föld tömege"
-    mass_electron:      "elektron tömege"
-    mass_proton:        "proton tömege"
-    mass_sun:           "a Nap tömege"
-    parsec:             "parszek"
-    permeability:       "a vákuum mágneses permeabilitása"
-    permittivity:       "a vákuum dielektromos állandója (permittivitása)"
-    planck:             "Planck allándó"
-    pressure_standard:  "standard légköri nyomás"
-    puerperium:         "puerperium (a gyermekágy időszaka)"
-    radius_earth:       "a Föld sugara"
-    radius_sun:         "a Nap sugara"
-    solar_flux:         "napállandó (a Nap sugárzásának fluxus sűrűsége \\SI{1}{\\au} távolságban)"
-    speed_light:        "fénysebesség vákuumban"
-    stefan_boltzmann:   "Stefan--Boltzmann-állandó"
-    universal_gas:      "univerzális gázállandó"
+    amu:                    ""
+    au:                     "csillagászati egység (Föld--Nap távolság)"
+    avogadro:               "Avogadro-állandó"
+    boltzmann:              "Boltzmann-állandó"
+    density_air:            "levegő sűrűsége"
+    density_helium:         "hélium sűrűsége"
+    density_water:          "a víz sűrűsége"
+    density_mercury:        ""
+    density_gold:           ""
+    elementary_charge:      "elemi töltés"
+    gforce:                 "nehézségi gyorsulás a Földön"
+    gravity:                "gravitációs állandó"
+    heat_capacity_water:    "a víz hőkapacitása"
+    inch:                   "hüvelyk"
+    mass_earth:             "a Föld tömege"
+    mass_electron:          "elektron tömege"
+    mass_proton:            "proton tömege"
+    mass_sun:               "a Nap tömege"
+    molar_mass_gold:        ""
+    parsec:                 "parszek"
+    permeability:           "a vákuum mágneses permeabilitása"
+    permittivity:           "a vákuum dielektromos állandója (permittivitása)"
+    planck:                 "Planck allándó"
+    pressure_standard:      "standard légköri nyomás"
+    puerperium:             "puerperium (a gyermekágy időszaka)"
+    radius_earth:           "a Föld sugara"
+    radius_sun:             "a Nap sugara"
+    solar_flux:             "napállandó (a Nap sugárzásának fluxus sűrűsége \\SI{1}{\\au} távolságban)"
+    speed_light:            "fénysebesség vákuumban"
+    stefan_boltzmann:       "Stefan--Boltzmann-állandó"
+    temperature_sun:        ""
+    universal_gas:          "univerzális gázállandó"
 
-    # heat_water:       "a víz hőkapacitása"
-    # ice_melting:      "a víz párolgási entalpiája"
+    # ice_melting:          "a víz párolgási entalpiája"
