--- a/modules/naboj/templates/i18n/russian.yaml
+++ b/modules/naboj/templates/i18n/russian.yaml
@@ -1,55 +1,61 @@
 section:
-    problems:           "Задания"
-    solutions:          "Образцы решений"
-    answers:            "Решения"
-    modulo:             "Остаток от деления"
+    problems:               "Задания"
+    solutions:              "Образцы решений"
+    answers:                "Решения"
+    modulo:                 "Остаток от деления"
 caption:
-    table:              "Таблица"
-    figure:             "Картинка"
+    table:                  "Таблица"
+    figure:                 "Картинка"
 competition:
     name:
-        nominative:     "Физический Náboj"
-        genitive:       "Физикального Náboja"
-    email:              "info-cz@physics.naboj.org"
-    website:            "https://physics.naboj.org/"
+        nominative:         "Физический Náboj"
+        genitive:           "Физикального Náboja"
+    email:                  "info-cz@physics.naboj.org"
+    website:                "https://physics.naboj.org/"
 tearoff:
-    team:               "Команда"
-    bottom:             "The team has received all problems."
+    team:                   "Команда"
+    bottom:                 "Команда собрала все задания."
 constants:
-    title:              "Таблица констант"
-    instruction:        "В течение соревнования рекомендуем пользоваться константами с этой таблицы. Решение полученное при помощи более точных величин Вам тоже примут."
-    constant:           "константа"
-    symbol:             "символ"
-    value:              "величина"
+    title:                  "Таблица констант"
+    instruction:            "В течение соревнования рекомендуем пользоваться константами с этой таблицы. Решение полученное при помощи более точных величин Вам тоже примут."
+    constant:               "константа"
+    symbol:                 "символ"
+    value:                  "величина"
 instructions:
-    title:              "Инструкции" 
+    title:                  "Инструкции"
 envelope:
-    donotopen:          "Do not open this envelope before the competition starts. TRANSLATE"
+    donotopen:              "Do not open this envelope before the competition starts. TRANSLATE"
 
 physics_constants:
-    au:                 "астрономическая единица (расстояние Земля--Сольнче)"
-    avogadro:           "постоянная Авогадро"
-    boltzmann:          "постоянная Больцмана"
-    density_air:        "плотность воздуха при стандартных условиях"
-    density_helium:     "плотность гелия при стандартных условиях"
-    density_water:      "плотность воды"
-    elementary_charge:  "элементарный заряд"
-    gforce:             "нормальное ускорение свободного падения"
-    gravity:            "гравитационная постоянная"
-    inch:               "английский дюйм"
-    mass_earth:         "масса Земли"
-    mass_electron:      "масса электрона"
-    mass_proton:        "масса протона"
-    mass_sun:           "масса Солнца"
-    parsec:             "парсек"
-    permeability:       "магнитная проницаемость вакуума"
-    permittivity:       "электрическая проницаемость вакуума"
-    planck:             "постоянная Планка"
-    pressure_standard:  "стандартное атмосферическое давление"
-    puerperium:         "послеродовой период"
-    radius_earth:       "радиус Земли"
-    radius_sun:         "радиус Солнца"
-    solar_flux:         "солярная постоянная"
-    speed_light:        "скорость света в вакууме"
-    stefan_boltzmann:   "постоянная Стефана--Больцмана"
-    universal_gas:      "универсальная (молярная) газовая постоянная"
+    amu:                    ""
+    au:                     "астрономическая единица (расстояние Земля--Сольнче)"
+    avogadro:               "постоянная Авогадро"
+    boltzmann:              "постоянная Больцмана"
+    density_air:            "плотность воздуха при стандартных условиях"
+    density_helium:         "плотность гелия при стандартных условиях"
+    density_water:          "плотность воды"
+    density_mercury:        ""
+    density_gold:           ""
+    elementary_charge:      "элементарный заряд"
+    gforce:                 "нормальное ускорение свободного падения"
+    gravity:                "гравитационная постоянная"
+    heat_capacity_water:    ""
+    inch:                   "английский дюйм"
+    mass_earth:             "масса Земли"
+    mass_electron:          "масса электрона"
+    mass_proton:            "масса протона"
+    mass_sun:               "масса Солнца"
+    molar_mass_gold:        ""
+    parsec:                 "парсек"
+    permeability:           "магнитная проницаемость вакуума"
+    permittivity:           "электрическая проницаемость вакуума"
+    planck:                 "постоянная Планка"
+    pressure_standard:      "стандартное атмосферическое давление"
+    puerperium:             "послеродовой период"
+    radius_earth:           "радиус Земли"
+    radius_sun:             "радиус Солнца"
+    solar_flux:             "солярная постоянная"
+    speed_light:            "скорость света в вакууме"
+    stefan_boltzmann:       "постоянная Стефана--Больцмана"
+    temperature_sun:        ""
+    universal_gas:          "универсальная (молярная) газовая постоянная"
