--- a/modules/naboj/templates/i18n/hungarian.yaml
+++ b/modules/naboj/templates/i18n/hungarian.yaml
@@ -27,25 +27,25 @@ envelope:
     donotopen:              "Do not open this envelope before the competition starts."
 
 physics_constants:
-    amu:                    ""
+    amu:                    "egységes atomi tömegegység"
     au:                     "csillagászati egység (Föld--Nap távolság)"
     avogadro:               "Avogadro-állandó"
     boltzmann:              "Boltzmann-állandó"
     density_air:            "levegő sűrűsége"
     density_helium:         "hélium sűrűsége"
     density_water:          "a víz sűrűsége"
-    density_mercury:        ""
-    density_gold:           ""
+    density_mercury:        "a higany sűrűsége"
+    density_gold:           "az arany sűrűsége"
     elementary_charge:      "elemi töltés"
     gforce:                 "nehézségi gyorsulás a Földön"
     gravity:                "gravitációs állandó"
-    heat_capacity_water:    "a víz hőkapacitása"
+    heat_capacity_water:    "a víz fajlagos hőkapacitása"
     inch:                   "hüvelyk"
     mass_earth:             "a Föld tömege"
     mass_electron:          "elektron tömege"
     mass_proton:            "proton tömege"
     mass_sun:               "a Nap tömege"
-    molar_mass_gold:        ""
+    molar_mass_gold:        "az arany moláris tömege"
     parsec:                 "parszek"
     permeability:           "a vákuum mágneses permeabilitása"
     permittivity:           "a vákuum dielektromos állandója (permittivitása)"
@@ -57,7 +57,7 @@ physics_constants:
     solar_flux:             "napállandó (a Nap sugárzásának fluxus sűrűsége \\SI{1}{\\au} távolságban)"
     speed_light:            "fénysebesség vákuumban"
     stefan_boltzmann:       "Stefan--Boltzmann-állandó"
-    temperature_sun:        ""
+    temperature_sun:        "a Nap hőmérséklete"
     universal_gas:          "univerzális gázállandó"
 
     # ice_melting:          "a víz párolgási entalpiája"
