Updated constants for Russian

--- a/modules/naboj/templates/i18n/russian.yaml
+++ b/modules/naboj/templates/i18n/russian.yaml
@@ -27,25 +27,25 @@ envelope:
     donotopen:              "Do not open this envelope before the competition starts. TRANSLATE"
 
 physics_constants:
-    amu:                    ""
+    amu:                    "атомная единица массы"
     au:                     "астрономическая единица (расстояние Земля--Сольнче)"
     avogadro:               "постоянная Авогадро"
     boltzmann:              "постоянная Больцмана"
     density_air:            "плотность воздуха при стандартных условиях"
     density_helium:         "плотность гелия при стандартных условиях"
     density_water:          "плотность воды"
-    density_mercury:        ""
-    density_gold:           ""
+    density_mercury:        "плотность ртути"
+    density_gold:           "плотность золота"
     elementary_charge:      "элементарный заряд"
     gforce:                 "нормальное ускорение свободного падения"
     gravity:                "гравитационная постоянная"
-    heat_capacity_water:    ""
+    heat_capacity_water:    "удельная теплоёмкость воды"
     inch:                   "английский дюйм"
     mass_earth:             "масса Земли"
     mass_electron:          "масса электрона"
     mass_proton:            "масса протона"
     mass_sun:               "масса Солнца"
-    molar_mass_gold:        ""
+    molar_mass_gold:        "молярная масса золота"
     parsec:                 "парсек"
     permeability:           "магнитная проницаемость вакуума"
     permittivity:           "электрическая проницаемость вакуума"
@@ -57,5 +57,5 @@ physics_constants:
     solar_flux:             "солярная постоянная"
     speed_light:            "скорость света в вакууме"
     stefan_boltzmann:       "постоянная Стефана--Больцмана"
-    temperature_sun:        ""
+    temperature_sun:        "температура Солнца"
     universal_gas:          "универсальная (молярная) газовая постоянная"
