Added Polish i18n constants

--- a/modules/naboj/templates/i18n/polish.yaml
+++ b/modules/naboj/templates/i18n/polish.yaml
@@ -27,25 +27,25 @@ envelope:
     donotopen:              "???"
 
 physics_constants:
-    amu:                    ""
+    amu:                    "jednostka masy atomowej"
     au:                     "jednostka astronomiczna (odległość Ziemia--Słońce)"
     avogadro:               "stała Avogadra"
     boltzmann:              "stała Boltzmanna"
     density_air:            "gęstość powietrza"
     density_helium:         "gęstość helu"
     density_water:          "gęstość wody"
-    density_mercury:        ""
-    density_gold:           ""
+    density_mercury:        "gęstość złota"
+    density_gold:           "gęstość rtęci"
     elementary_charge:      "ładunek elementarny"
     gforce:                 "przyspieszenie ziemskie normalne"
     gravity:                "stała grawitacji"
-    heat_capacity_water:    ""
+    heat_capacity_water:    "pojemność cieplna wody"
     inch:                   "cal"
     mass_earth:             "masa Ziemi"
     mass_electron:          "masa elektronu"
     mass_proton:            "masa protonu"
     mass_sun:               "masa Słońca"
-    molar_mass_gold:        ""
+    molar_mass_gold:        "masa molowa złota"
     parsec:                 "parsek"
     permeability:           "przenikalność magnetyczna próżni"
     permittivity:           "przenikalność elektryczna próżni"
@@ -57,5 +57,5 @@ physics_constants:
     solar_flux:             "gęstość strumienia promieniowania słonecznego w \\SI{1}{\\au}"
     speed_light:            "szybkość światła w próżni"
     stefan_boltzmann:       "stała Stefana-Boltzmanna"
-    temperature_sun:        ""
+    temperature_sun:        "temperatura Słońca"
     universal_gas:          "stała gazowa"
