--- a/core/tex/siunitx.tex
+++ b/core/tex/siunitx.tex
@@ -33,3 +33,4 @@
 \DeclareSIUnit{\solarluminosity}{\ensuremath{\mathrm{L}_\Sun}}
 \DeclareSIUnit{\earthmass}{\ensuremath{\mathrm{M}_\Earth}}
 \DeclareSIUnit{\atomicmass}{u}
+\DeclareSIUnit{\lightyear}{ly}
