--- a/modules/scholar/templates/homework-base.tex
+++ b/modules/scholar/templates/homework-base.tex
@@ -9,11 +9,18 @@
         \fancyhead[L]{\textit{Domáca úloha č. (* issue.number *)}}
         \fancyhead[R]{\textit{Deadline (* issue.deadline.strftime('%d. %m. %Y') *)}}
 
-        \renewcommand{\thesubsubsection}{\thesubsection\alph{subsubsection}}
+        \titleformat{\section}[block]{\Huge\bfseries\centering}{}{0pt}{}
+        \titleformat{\subsection}[hang]{\Large\bfseries\vspace{4mm}\vspace*{-4mm}}{\arabic{subsection}. }{0pt}{}
+        \titleformat{\subsubsection}[hang]{\bfseries}{\arabic{subsection}\alph{subsubsection}. }{0pt}{}[]
+        \titleformat{\paragraph}[hang]{\it\bfseries}{}{0pt}{}[]
+        \titlespacing{\section}{0pt}{6mm}{2mm}
+        \titlespacing{\subsection}{0pt}{0mm}{0mm}
+        \titlespacing{\subsubsection}{0pt}{2mm}{0pt}
+        \titlespacing{\paragraph}{0pt}{2mm}{0pt}
     }
 (@ endblock style @)
 
-(@ block title @)
+(@ block content @)
     \section{Domáca úloha č. (* issue.number *)}
     \begin{center}
         \textit{%
@@ -21,4 +28,6 @@
             najneskôr do začiatku cvičenia (* issue.deadline.strftime('%d. %m. %Y') *).
             Odovzdaním čestne prehlasujete, že riešenia sú vaše vlastné.}
     \end{center}
-(@ endblock @)
+    (@ block sections @)
+    (@ endblock sections @)
+(@ endblock content @)
