--- a/modules/scholar/templates/homework-students.tex
+++ b/modules/scholar/templates/homework-students.tex
@@ -1,5 +1,14 @@
 (@ extends 'homework-base.tex' @)
 
-(@ block content @)
-    \input{\activeDirectory/content.tex}
-(@ endblock content @)
+(@ block sections @)
+    (@ for problem in issue.problems @)
+        \subsection{(* problem.name *)}
+        \tryInput{\activeDirectory/(* problem.id *)/text.tex}
+        (@ if problem.subproblems @)
+            (@ for subproblem in problem.subproblems @)
+                \subsubsection{(* subproblem.name *)}
+                \protectedInput{\activeDirectory/(* problem.id *)/(* subproblem.id *)/problem.tex}
+            (@ endfor @)
+        (@ endif @)
+    (@ endfor @)
+(@ endblock sections @)
