--- a/core/tex/math.tex
+++ b/core/tex/math.tex
@@ -5,6 +5,10 @@
 \DeclareMathOperator{\Div}{\del\cdot}
 \DeclareMathOperator{\Rot}{\del\times}
 
+\DeclareMathOperator{\sinc}{sinc}
+
+\NewDocumentCommand{\Diff}{O{}}{\diff^{\,#1}\!}
+
 % \Derivative[order]{what}{by-what}
 \NewDocumentCommand{\Derivative}{O{} m m}{%
     \IfNoValueTF{#1}{%
@@ -93,7 +97,7 @@
 \NewDocumentCommand{\QQText}{m}{\qquad\text{#1}\qquad}
 
 \NewDocumentCommand{\Lim}{m m}{\lim\limits_{#1 \rightarrow #2}}
-\NewDocumentCommand{\Exp}{m}{\mathrm{e}^{#1}}
+\NewDocumentCommand{\Exp}{m}{e^{#1}}
 \NewDocumentCommand{\LogTen}{}{\log_{10}}
 \NewDocumentCommand{\MustEqual}{}{\stackrel{!}{=}}
 \NewDocumentCommand{\DefEqual}{}{\stackrel{\mathrm{def}}{=}}
