--- a/modules/seminar/format/format-competition.tex
+++ b/modules/seminar/format/format-competition.tex
@@ -24,8 +24,11 @@
         \begin{minipage}{0.7\textwidth}
             \centering
             \vspace{4pt}
-            {\Large (* competition.full.nominative *)}\\[4pt]
-            {\footnotesize (* competition.short *), (* competition.organisation.department.short *) (* competition.organisation.faculty.short *), (* competition.organisation.address *)}\\[2pt]
+            {\Large (* competition.full.nominative *)} \\[4pt]
+            {%
+                \footnotesize (* competition.short *), (* competition.organisation.department.short *)%
+                (* competition.organisation.faculty.short *), (* competition.organisation.address *)%
+            }\\[2pt]
             \vspace{6pt}
         \end{minipage}
     }
